# ast_serialize

./: AGENTS.md  BUILD.md  Cargo.toml  README.md  ast_serialize.pyi  build_wheels.sh  pyproject.toml  test_ast_serialize.py
.github/workflows/: build_wheels.yml  test.yml
src/: func_effect_visitor.rs  lib.rs  main.rs  reachability.rs  serialize_ast.rs  type_comment.rs
