[package]
name = "mypy_parser"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
name = "ast_serialize"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }

# Ruff dependencies for parsing Python
ruff_linter = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_python_parser = { workspace = true }
ruff_source_file = { workspace = true }
ruff_text_size = { workspace = true }

# Error handling
anyhow = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }

[features]
# Turn off rayon for profiling
singlethreaded = []

[lints]
workspace = true
