[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "ast_serialize"
version = "0.1.0"
description = "Python bindings for mypy AST serialization"
requires-python = ">=3.7"

[tool.maturin]
bindings = "pyo3"
manifest-path = "Cargo.toml"
module-name = "ast_serialize"
